refactor: success to refactor all the paripoke game with many different files role'

--- a/PokemonTeam/Views/PariPoke/Index.cshtml
+++ b/PokemonTeam/Views/PariPoke/Index.cshtml
@@ -1,14 +1,20 @@
 @{
 ViewData["Title"] = "Accueil - PokeRace";
 }
-
+<h2>Mon Jeu</h2>
+<p>Bienvenue dans le jeu ! Choisis un Pokémon et prépare-toi à la course.</p>
+@Html.Partial("_RunnerSelection")
+@Html.Partial("_BetSelection")
 @Html.Partial("_GamePartial")
 @Html.Partial("_ShopPartial")
-@Html.Partial("_InventoryPartial")
+@* @Html.Partial("_InventoryPartial") *@
 @Html.Partial("_PlayerInfoPartial")
 
 @section Scripts {
-    <script src="~/js/shop.js"></script>
-    <script src="~/js/PariPoke.js"></script>
+    <script src="~/js/PariPoke/common.js"></script>
     <script src="~/js/PlayerProfileHeader.js"></script>
+    <script src="~/js/PariPoke/runnerSelection.js"></script>
+    <script src="~/js/PariPoke/betSelection.js"></script>
+    <script src="~/js/PariPoke/Game.js"></script>
+    <script src="~/js/shop.js"></script>
 }
