refactor: add some bootstrap class in my game

--- a/PokemonTeam/Views/PariPoke/_BetSelection.cshtml
+++ b/PokemonTeam/Views/PariPoke/_BetSelection.cshtml
@@ -5,7 +5,7 @@
 
 <input type="hidden" id="selectedBetPokemon" />
 
-<h4>Montant du pari :</h4>
-<input id="betAmount" type="number" min="1" value="10" />
-
-<button id="confirmBet" type="button">Confirmer mon pari</button>
+<div class="input-group mb-3 bet-controls mt-3">
+    <input id="betAmount" type="number" class="form-control bet-input" min="1" value="10">
+    <button id="confirmBet" type="button" class="btn btn-primary">Confirmer mon pari</button>
+</div>
