--- a/PokemonTeam/Views/PariPoke/_RunnerSelection.cshtml
+++ b/PokemonTeam/Views/PariPoke/_RunnerSelection.cshtml
@@ -2,6 +2,9 @@
 
 <h3>Choisis tes 4 Pokémon coureurs :</h3>
 <div id="runnersSelection" class="pokemon-cards"></div>
-<button id="confirmRunners" type="button">Confirmer ma sélection</button>
+<div class="runner-actions">
+    <button id="confirmRunners" type="button" class="btn btn-primary">Confirmer ma sélection</button>
+</div>
+
 
 
