--- a/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
+++ b/PokemonTeam/Views/PariPoke/_GamePartial.cshtml
@@ -1,6 +1,6 @@
 @* _GamePartial.cshtml *@
 
-<section id="game">
+<section id="game" class="mt-3">
     <h3>Course Pokémon</h3>
     <div id="raceContainer">
         <svg id="raceSVG" width="1600" height="600" viewBox="0 0 1600 600" xmlns="http://www.w3.org/2000/svg" style="background:#70c470;">
@@ -27,7 +27,7 @@
     </div>
 
     <div id="game-ui">
-        <button id="startRace">Démarrer la course</button>
+        <button id="startRace" class="btn btn-primary">Démarrer la course</button>
         <div id="progressBars" style="width: 80%; margin: 20px auto;"></div>
     </div>
 </section>
