feature: add a boost info

--- a/PokemonTeam/wwwroot/css/PariPoke.css
+++ b/PokemonTeam/wwwroot/css/PariPoke.css
@@ -166,3 +166,7 @@
 #confirmBet {
     white-space: nowrap; /* empêche le texte de passer à la ligne */
 }
+
+.boosted-runner {
+    filter: drop-shadow(0 0 10px gold);
+}
