--- a/PokemonTeam/Views/PariPoke/Index.cshtml
+++ b/PokemonTeam/Views/PariPoke/Index.cshtml
@@ -10,6 +10,7 @@ ViewData["Title"] = "Accueil - PokeRace";
 @Html.Partial("_PlayerInfoPartial")
 
 @section Scripts {
+    <script src="/js/PariPoke/previewUtils.js"></script>
     <script src="~/js/PariPoke/common.js"></script>
     <script src="~/js/PlayerProfileHeader.js"></script>
     <script src="~/js/shop.js"></script>
