--- a/PokemonTeam/Views/Shared/_Layout.cshtml
+++ b/PokemonTeam/Views/Shared/_Layout.cshtml
@@ -28,6 +28,12 @@
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="PariPoke" asp-action="">PariPoke</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="PokeGacha" asp-action="">PokeGacha</a>
+                    </li>
                 </ul>
 
                 <!-- Bloc Auth -->
